--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,7 +11,7 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-              <li class="active"><a href="{{site.baseurl}}/">Home</a></li>
+              <li><a href="{{site.baseurl}}/">Home</a></li>
               <li><a href="{{site.baseurl}}/projects">Projects</a></li>
               <li><a href="{{site.baseurl}}/tools">Tools</a></li>
               <li><a href="{{site.baseurl}}/about">About</a></li>
