--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
       <footer>
         <p class="pull-right"><a onclick="$(this).click(function() {$('html,body').animate({scrollTop:0},800);});">Back to top</a></p>
-        <p>&copy; 2014 Stefano Sabatini &middot; Images CC-BY Wikimedia Commons</p>
+        <p>&copy; 2014 Stefano Sabatini &middot; Images CC-BY Wikimedia Commons &middot; <a href="http://cookiestatement.eu/">Cookie statement</a></p>
       </footer>
     </div> 
 <script src="/js/js.cookie-1.5.1.min.js"></script>
