--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,8 @@
-      <footer>
+      <footer class="footer">
+      <div class="container">
         <p class="pull-right"><a onclick="$(this).click(function() {$('html,body').animate({scrollTop:0},800);});">Back to top</a></p>
-        <p>&copy; 2014 Stefano Sabatini &middot; Images CC-BY Wikimedia Commons &middot; <a href="http://cookiestatement.eu/">Cookie statement</a></p>
+        <p>&copy; 2016 Stefano Sabatini &middot; Images CC-BY Wikimedia Commons</p>
+      </div>
       </footer>
-    </div>
 </body>
 </html>
