--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
-    <div class="navbar navbar-default" role="navigation">
+    <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -9,15 +9,11 @@
           </button>
           <a class="navbar-brand" href="#"><img src="{{site.baseurl}}/images/logo.png"/></a>
         </div>
-        <div class="navbar-collapse collapse">
+        <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
               <li><a href="{{site.baseurl}}/">Home</a></li>
-              <li><a href="{{site.baseurl}}/projects">Projects</a></li>
               <li><a href="{{site.baseurl}}/tools">Tools</a></li>
-              <li><a href="{{site.baseurl}}/about">About</a></li>
           </ul>
-
-        </div>
+        </div><!--/.nav-collapse -->
       </div>
-    </div>
-
+    </nav>
