--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,44 @@
-.navbar-brand{padding:5px 15px;}
 
-.img140 {
-height: 140px;
+html {
+  position: relative;
+  min-height: 100%;
 }
-.center{text-align:center;}
-.row{padding:15px;}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 30px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 30px;
+  background-color: #f5f5f5;
+}
+
+
+
+body > .container {
+  padding: 60px 15px 0;
+}
+.container .text-muted {
+  margin: 20px 0;
+}
+
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+code {
+  font-size: 80%;
+}
+
+.navbar-brand {
+    height: 60px;
+    padding: 10px 15px;
+}
+
+.navbar-nav>li>a {
+    line-height: 30px;
+}
